fix: corrected project div with wrong description and title; fixed the project item shifting

--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -24,12 +24,12 @@ body {
     transition: 0.5s ease-in-out;
 }
 
-
+/* making it a fixed size */
 .work-items {
     padding-block: 40px;
     display: flex;
     gap: 30px;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -39,6 +39,7 @@ body {
     padding: 30px;
     border: 1px solid #ddd;
     cursor: pointer;
+    flex-basis: calc(50% - 20px); /* Set a fixed width of one-half minus the gap between items */
 }
 
 .work-item-block:hover h3 {
